docs(drag-drop): fix cross-browser inconsistencies in demos (#13364)
Fixes the text in the drag&drop demos not being centered horizontally on some browsers, as well as the handle being too tall on IE11.

--- a/src/material-examples/cdk-drag-drop-axis-lock/cdk-drag-drop-axis-lock-example.css
+++ b/src/material-examples/cdk-drag-drop-axis-lock/cdk-drag-drop-axis-lock-example.css
@@ -7,6 +7,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background: #fff;
   border-radius: 4px;
   margin-right: 25px;
