--- a/src/material-examples/cdk-drag-drop-handle/cdk-drag-drop-handle-example.css
+++ b/src/material-examples/cdk-drag-drop-handle/cdk-drag-drop-handle-example.css
@@ -30,4 +30,6 @@
   right: 10px;
   color: #ccc;
   cursor: move;
+  width: 24px;
+  height: 24px;
 }
